Version 0.13
------------

The Debian version installed by default is now Wheezy.

Improve documentation with regard to instance variants.


Version 0.12
------------

A few small bugfixes:

- the defaults file is now installed automatically; even though all
  settings are commented out, this allows for easier configuration
- require and check for a minimum device size; this makes error messages
  much clearer, compared to tar's out of disk space errors (fixes issue
  164)
- it is now possible to override the "components" argument to
  debootstrap, to be able to install more packages (e.g. from contrib,
  or from universe) (fixes issue 254)
- all existing hooks are now distributed in the archive and also
  installed via `make install' (fixes issue 283)
- the console activation for xen-pvm hypervisor has been corrected;
  before it was working only for kvm (fixes issue 284)


Version 0.11
------------

The partition alignment offset is now configurable (using the
PARTITION_ALIGNMENT configuration setting, in sectors) and the
distribution names and packages in the defaults file have been updated.

Furthermore, the grub example hook has been improved a bit:

- automatically uses the defined proxy, so that package installation
  uses the same method as the main install
- debconf frontend set to non-interactive, to prevent an debconf
  question loop

However, there still seem to be issues related to this hook (recent grub
versions fail to run correctly "grub-install" or "update-grub" and
complain about device mappings); help is welcome.

Version 0.10
------------

This add supports for ext4 file-systems and changes the default
distribution from Lenny to Squeeze.

Additionally, new hooks were added:

- setting the password for the root user
- setting the timezone
- setting SSH keys for a given user

Version 0.9
-----------

Changed the default CUSTOMIZE_DIR (under $sysconfdir, usually /etc) from
ganeti/instance-debootstrap.d to ganeti/instance-debootstrap/hooks, to