@@ -4,8 +4,8 @@ osdir=$(OS_DIR)/$(osname)
 variantsdir=$(DESTDIR)$(sysconfdir)/ganeti/instance-debootstrap/variants
 defaultsdir=$(DESTDIR)$(sysconfdir)/default
 
-dist_os_SCRIPTS = create import export rename
-dist_os_DATA = ganeti_api_version variants.list
+dist_os_SCRIPTS = create import export rename verify
+dist_os_DATA = ganeti_api_version variants.list parameters.list
 os_DATA = common.sh
 
 dist_doc_DATA = COPYING NEWS README
