@@ -1,3 +1,4 @@
-5
-10
+20
 15
+10
+5
