@@ -1,0 +1,32 @@
+#!/bin/bash
+
+# Copyright (C) 2007, 2008, 2009 Google Inc.
+#
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 2 of the License, or
+# (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful, but
+# WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+# General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program; if not, write to the Free Software
+# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA
+# 02110-1301, USA.
+
+set -e
+
+case $OSP_FILESYSTEM in
+  ""|"ext2"|"ext3"|"ext4")
+    ;;
+  *)
+    echo "Invalid value '$OSP_FILESYSTEM' for the filesystem parameter" 1>&2
+    exit 1
+    ;;
+esac
+
+exit 0
+
